kubernetes/apps/hydra/trading/httpRoute-https.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: trading-https
  namespace: trading
spec:
  parentRefs:
  - name: https-gateway-thetillhoff-de
    namespace: gateways
  hostnames:
  - trading.thetillhoff.de
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: frontend
      port: 80
